--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li><a href="#"class="fa fa-rss"></a></li>
                 <li><a href="#" class="fa fa-snapchat"></a></li>
                 <li><a href="#"class="fa fa-twitter"></a></li>
-                <li style="padding-left: 55px;"> <input type="text"name="search"id="search"placeholder="search ">
+                <li> <input type="text"name="search"id="search"placeholder="search ">
                 <button type="button"class="fa fa-search"></button></li>
             </ul>
         </div>
@@ -71,7 +71,7 @@
         <div class="right">
         
             <div class="a" >
-                <img src="2.jpg.jpg"width="350"height="350"alt="sall">
+                <img src="2.jpg"width="350"height="350"alt="sall">
             </div>
              <div><h3 style="text-align:center">WELCOME,Y'ALL</h3></div>
             
